rust/test/diagnostics/inc/cta_type_same_align_fail.stderr
error[E0308]: mismatched types
 --> ../../../rust/test/diagnostics/inc/cta_type_same_align_fail.rs:7:3
  |
7 |   cta_type_same_align!( Int, i16 );
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |   |
  |   expected an array with a fixed size of 128 elements, found one with 2 elements
  |   expected due to this
  |
  = note: this error originates in the macro `cta_type_same_align` (in Nightly builds, run with -Z macro-backtrace for more info)
